<resources>
    <string name="app_name">SongWritter</string>
    <string name="uptodate">Données à jour</string>
    <string name="needUpdate">Mise à jour disponible</string>

    <!-- placeholders -->
    <string name="ph_title">Title</string>
    <string name="ph_content">Lyrics</string>
    <string name="title_activity_index">IndexActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_lyrics">Ajouter</string>

    <string name="nav_grl">Vue d\'ensemble</string>
    <string name="nav_profile">Mon profil</string>
    <string name="nav_texts">Mes textes</string>
    <string name="nav_projects">Mes projets</string>
    <string name="nav_settings">Mes options</string>
    <string name="nav_friends">Mes contacts</string>
    <string name="nav_msg">Mes messages</string>

    <!-- Example values-->
    <string name="example_beat_title">Polnatrap</string>
    <string name="example_beat_author">Musashi</string>
    <string name="example_beat_details">Face A</string>
    <string name="example_lyrics_title">Vox Agora</string>
    <string name="example_lyrics_content">Noir kawa, à la Néron débute, élevé sur des terres occultes où les démons exultent</string>
    <string name="example_date">15/08/2017</string>
    <string name="example_lyrics_update">10h55:42</string>
    <string name="example_song_current_second">0:00</string>
    <string name="example_current_recording">0:00.13</string>

    <!-- Hints -->
    <string name="hint_mail">Adresse mail</string>
    <string name="hint_pass">Mot de passe</string>
    <string name="hint_beat_title">Beat title</string>


    <!-- Button -->
    <string name="btn_log_in">Log in</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_add_beat">Add a beat</string>
    <string name="remind_credentials">Enregistrer mes identifiants</string>


    <!-- Connect states -->
    <string name="state_connected">Connecté</string>
    <string name="state_not_connected">Non connecté</string>

    <!-- Formats -->
    <string name="format_connected_as">Connecté en tant que %s</string>
    <string name="format_last_update">Modif. %s</string>
    <string name="format_songs_count">%d textes</string>
    <string name="format_songs_beats_count">%d beats</string>
    <string name="format_delete_song">Remove \'%s\' from your lyrics ?</string>
    <string name="format_has_been_updated">\'%s\' has been updated</string>
    <string name="format_has_been_saved">\'%s\' has been saved</string>
    <string name="format_has_been_deleted">\'%s\' has been deleted !"</string>
    <string name="format_beat_has_been_added">\'%s\' has been added to your beats</string>

    <!-- Loadings -->
    <string name="loading_songs">Récupération de vos textes</string>

    <!-- No Content -->
    <string name="no_beats">Pas de beat pour ce morceau</string>
    <string name="no_records">Pas d\'enregistrement pour ce morceau</string>
    <string name="no_account">Créer un compte</string>
    <string name="no_update">Aucune modification</string>
    <string name="no_playlist">No playlist</string>

    <!-- Dialogs -->
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_save_beat">Add beat</string>
    <string name="dialog_title_media_playing">Media is still playing</string>
    <string name="dialog_continue_playing">Continue playing ?</string>
    <string name="dialog_save_modification">Save modifications ?</string>
    <string name="dialog_quit_without_saving">Quit without saving</string>
    <string name="dialog_save_and_quit">Save and quit</string>
    <string name="dialog_stop_playing">Stop playing</string>
    <string name="dialog_remove_beats">Remove beat</string>
    <string name="dialog_save_record">Save record</string>
    <string name="dialog_remove_record">Remove record ?</string>




    <!--Generic-->
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="confirm">Confirm</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="file_not_found">File not found</string>
    <string name="null_title">Title can not be null</string>
    <string name="null_author">Author can not be null</string>
    <string name="null_path">Path can not be null</string>
    <string name="null_type">Type can not be null</string>



    <!--Song-->
    <string name="from_youtube">From YouTube</string>
    <string name="from_local_storage">From locale storage</string>

    <string-array name="song_sections">
        <item>Paroles</item>
        <item>Modifier</item>
        <item>Musiques</item>
        <item>Records</item>
        <item>Partager</item>
    </string-array>

</resources>
