<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grl"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_grl" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_text"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_texts" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_projects" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_friends" />
        <item
            android:id="@+id/nav_msg"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_msg" />
    </group>
</menu>
