<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/row"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/record_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_beat_title"
                    android:textColor="@color/black0"
                    android:lines="1"
                    android:textStyle="bold"
                    android:ellipsize="marquee"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/record_duration"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:lines="1"
                        android:ellipsize="marquee"
                        android:textColor="@color/grey"
                        android:text="@string/example_song_current_second" />

                    <TextView
                        android:id="@+id/record_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:lines="1"
                        android:textColor="@color/black0"
                        android:gravity="end"
                        android:textSize="10dp"
                        android:layout_marginEnd="3dp"
                        android:text="@string/example_date" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>