<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/row"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/music_action"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimaryDark"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/play_pause_stop"
                    android:src="@drawable/ic_play_arrow_white_18dp"
                    android:layout_width="match_parent"
                    android:tint="@color/white0"
                    android:layout_height="match_parent"
                    android:padding="8dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_toEndOf="@+id/music_action"
                android:layout_toStartOf="@+id/beat_shared"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/beat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_beat_title"
                    android:textColor="@color/black0"
                    android:lines="1"
                    android:textStyle="bold"
                    android:ellipsize="marquee"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/beat_author"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:lines="1"
                        android:ellipsize="marquee"
                        android:text="@string/example_beat_author" />

                    <TextView
                        android:id="@+id/beat_details"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:lines="1"
                        android:textColor="@color/black0"
                        android:gravity="end"
                        android:layout_marginEnd="10dp"
                        android:text="@string/example_beat_details" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/beat_shared"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_cloud_off_white_18dp"
                android:visibility="visible" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>