<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.9">

        <SeekBar
            android:id="@+id/songProgressBar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:thumb="@null"
            android:progressDrawable="@drawable/listen_progress"/>

        <RelativeLayout
            android:id="@+id/media_details"
            android:layout_width="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_height="wrap_content">

            <!-- Media Detail -->
            <LinearLayout
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/media_ctrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/media_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white0"
                    android:textStyle="bold"
                    android:lines="1"
                    android:ellipsize="marquee"
                    android:textSize="16dp"
                    android:text="@string/example_beat_title"/>

                <TextView
                    android:id="@+id/media_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryLight"
                    android:lines="1"
                    android:ellipsize="marquee"
                    android:textSize="12dp"
                    android:text="@string/example_beat_author"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp">

                    <TextView
                        android:id="@+id/media_current_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_song_current_second"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textSize="10dp"
                        android:textColor="@color/colorPrimaryLight"/>

                    <TextView
                        android:id="@+id/media_total_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_song_current_second"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:textSize="10dp"
                        android:textColor="@color/white0"/>

                </LinearLayout>

            </LinearLayout>

            <!-- Media Ctrl -->
            <LinearLayout
                android:id="@+id/media_ctrl"
                android:src="@drawable/avatar_placeholder"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_previous"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/ic_skip_previous_white_18dp"/>

                <ImageView
                    android:id="@+id/btn_play"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:src="@drawable/ic_play_arrow_white_18dp"/>

                <ImageView
                    android:id="@+id/btn_next"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/ic_skip_next_white_18dp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>